--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -159,36 +159,36 @@ button {
   row-gap: 24px;
   column-gap: 24px;
   margin-bottom: 32px;
-  margin-right: 20px;
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 .gallery-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  border: 1px solid #808080;
+  border: none;
   height: auto;
   width: auto;
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: rgba(12, 16, 19, 0.946);
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
-.gallery-image {
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  height: 200px;
+.gallery-container img {
   width: 360px;
+  height: 200px;
+  object-fit: cover;
 }
 
 .gallery-min-div {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  padding: 10px;
+  gap: 40px;
+  padding: 4px;
 }
 
 .gallery-text {
